2005-12-28  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfiledialog.[ch]: set the new
	"do-overwrite-confirmation" property on GtkFileChooser. Removed
	gimp_file_overwrite_dialog().

	* app/dialogs/file-save-dialog.c (file_save_dialog_check_uri):
	removed broken code which tried to figure if a file exists.
	Fixes bug #309729.

	* app/widgets/gimpdnd-xds.c: added gimp_file_overwrite_dialog()
	here as private utility function.

2005-12-28  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/about-dialog.c: set the new "wrap-license" property
	on GtkAboutDialog and remove the explicit newlines from the string
	holding the GPL.

2005-12-28  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpwidgets-utils.[ch]: removed
	gimp_action_get_accel_closure().

	* app/widgets/gimpactionview.c (gimp_action_view_new): use
	gtk_action_get_accel_closure() instead.

2005-12-28  Michael Natterer  <mitch@gimp.org>

	* configure.in: bump version to 2.3.7,
	require GTK+ >= 2.8.0 and pango >= 2.10.0.

	* app/gui/gui.c (gui_sanity_check): changed accordingly.

2005-12-28  Sven Neumann  <sven@gimp.org>

	* Made 2.3.6 development release from the 22nd Chaos Communication
	Congress.

2005-12-28  Sven Neumann  <sven@gimp.org>

	* data/images/gimp-splash.png: splash screen for the 22C3 release.

2005-12-28  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/paint_tools.pdb: follow paint-info renaming.

	* app/pdb/paint_tools_cmds.c: regenerated.

2005-12-27  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpconvolve.c (gimp_convolve_register)
	* app/paint/gimpdodgeburn.c (gimp_dodge_burn_register): fixed
	stock IDs.

2005-12-27  Michael Natterer  <mitch@gimp.org>

	Fixed incomplete core/ui separation of paint tools and paint
	methods:

	* app/core/core-enums.h
	* app/core/gimpcontext.[ch]: added a "paint-info" property and API
	so the current paint method can be selected without the need for
	an active tool.

	(gimp_context_real_set_tool): set the paint-info to