@@ -1,6 +1,7 @@
 # Files from the Gimp distribution which have already been
 # marked to allow runtime translation of messages
 
+app/about.h
 app/app_procs.c
 app/batch.c
 app/main.c
