@@ -1,3 +1,7 @@
+2005-12-28  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added app/about.h.
+
 2005-12-26  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Updated German translation.
