@@ -1,3 +1,12 @@
+2005-12-28  Sven Neumann  <sven@gimp.org>
+
+	* app/Makefile.am
+	* app/about.h: new file collecting some strings about the app.
+
+	* app/main.c
+	* app/dialogs/about-dialog.c
+	* app/dialogs/user-install-dialog.c: use the defines from about.h.
+
 2005-12-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpfiledialog.[ch]: set the new
